--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - run: git config --global user.name 'joao208'
+      - run: git config --global user.email 'joao.augusto@foodzilla.com.br'
       - run: npm ci
+      - run: npm run build
 
   publish-npm:
     needs: build
@@ -26,24 +30,10 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - run: git config --global user.name 'joao208'
+      - run: git config --global user.email 'joao.augusto@foodzilla.com.br'
       - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
